--- a/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Droid/SQLiteSample.Droid.csproj
+++ b/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Droid/SQLiteSample.Droid.csproj
@@ -61,6 +61,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	<PackageReference Include="SQLitePCLRaw.bundle_green" Version="2.0.7" IncludeAssets="none" />  
     <PackageReference Include="Uno.UI" Version="4.5.12" />
     <PackageReference Include="Uno.UI.RemoteControl" Version="4.5.12" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.5.12" />
