--- a/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Mobile/SQLiteSample.Mobile.csproj
+++ b/UI/SQLiteSample/SQLiteSample/SQLiteSample/SQLiteSample.Mobile/SQLiteSample.Mobile.csproj
@@ -14,7 +14,8 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
-	<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />  
+	<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.3" />  
     <PackageReference Include="Uno.WinUI" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
