--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Mobile/Demo.Mobile.csproj
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Mobile/Demo.Mobile.csproj
@@ -32,7 +32,9 @@
 	  <PackageReference Include="SQLiteNetExtensions">
 		  <Version>2.1.0</Version>
 	  </PackageReference>
-    <PackageReference Include="Uno.WinUI" Version="4.6.19" />
+	<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+	<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.3" />
+	<PackageReference Include="Uno.WinUI" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
