--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Wasm/Demo.Wasm.csproj
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Wasm/Demo.Wasm.csproj
@@ -3,8 +3,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
     <NoWarn>NU1701</NoWarn>
-		
-	</PropertyGroup>
+  </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)'=='Debug'">
     <MonoRuntimeDebuggerEnabled>true</MonoRuntimeDebuggerEnabled>
     <DefineConstants>$(DefineConstants);TRACE;DEBUG</DefineConstants>
@@ -28,6 +27,10 @@
   </ItemGroup>
   <ItemGroup>
     <LinkerDescriptor Include="LinkerConfig.xml" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Remove="Bogus" />
+    <None Remove="CountryData.Bogus" />
   </ItemGroup>
   <ItemGroup>
     <!--
@@ -56,5 +59,5 @@
     <PackageReference Include="Uno.Wasm.Bootstrap" Version="7.0.24" />
     <PackageReference Include="Uno.Wasm.Bootstrap.DevServer" Version="7.0.24" />
   </ItemGroup>
-  <Import Project="..\Demo.Shared\Demo.Shared.projitems" Label="Shared" Condition="Exists('..\Demo.Shared\Demo.Shared.projitems')" />
+  <Import Project="..\Demo.Shared\Demo.Shared.projitems" Label="Shared" />
 </Project>
