--- a/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Windows/Demo.Windows.csproj
+++ b/UI/UnoSQLiteOneDriveInvoiceSample/Demo/Demo/Demo.Windows/Demo.Windows.csproj
@@ -10,6 +10,7 @@
 		<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
 		<UseWinUI>true</UseWinUI>
 		<EnablePreviewMsixTooling>true</EnablePreviewMsixTooling>
+		<DefaultLanguage>en-US</DefaultLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
@@ -41,6 +42,8 @@
 		<PackageReference Include="SQLiteNetExtensions">
 			<Version>2.1.0</Version>
 		</PackageReference>
+		<PackageReference Include="sqlite-net-pcl" Version="1.8.116" />
+		<PackageReference Include="SQLitePCLRaw.provider.dynamic_cdecl" Version="2.1.3" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.1.3" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22000.196" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
