--- a/UI/Benchmark/AppBenchmark/AppBenchmark.Mobile/AppBenchmark.Mobile.csproj
+++ b/UI/Benchmark/AppBenchmark/AppBenchmark.Mobile/AppBenchmark.Mobile.csproj
@@ -14,9 +14,9 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="BenchmarkDotNet" Version="0.13.2" />
-    <PackageReference Include="BenchmarkDotNet.Annotations" Version="0.13.2" />
-    <PackageReference Include="Uno.WinUI" Version="4.6.19" />
+	  <PackageReference Include="Uno.BenchmarkDotNet" Version="0.11.7-develop" />
+	  <PackageReference Include="Uno.BenchmarkDotNet.Annotations" Version="0.11.7-develop" />
+	  <PackageReference Include="Uno.WinUI" Version="4.6.19" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
