--- a/UI/ControlLibrary/Apps/Uno.Sample.ControlLibrary.Mobile/Uno.Sample.ControlLibrary.Mobile.csproj
+++ b/UI/ControlLibrary/Apps/Uno.Sample.ControlLibrary.Mobile/Uno.Sample.ControlLibrary.Mobile.csproj
@@ -2,6 +2,7 @@
   <PropertyGroup>
 		<TargetFrameworks>net6.0-android</TargetFrameworks>
 		<TargetFrameworks>$(TargetFrameworks);net6.0-ios</TargetFrameworks>
+	    <GenerateLibraryLayout>true</GenerateLibraryLayout>
 		
 
 		<!-- Disabled because of https://github.com/xamarin/xamarin-macios/issues/16401--><!--
@@ -14,11 +15,11 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Uno.WinUI" Version="4.6.19" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.19" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.19" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.19" />
+    <PackageReference Include="Uno.WinUI" Version="4.6.39" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.39" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
+    <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.39" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(TargetFramework)'=='net6.0-android'">
