--- a/UI/SkottieSample/SkottieSample/SkottieSample.Windows/SkottieSample.Windows.csproj
+++ b/UI/SkottieSample/SkottieSample/SkottieSample.Windows/SkottieSample.Windows.csproj
@@ -10,6 +10,7 @@
 		<PublishProfile>win10-$(Platform).pubxml</PublishProfile>
 		<UseWinUI>true</UseWinUI>
 		<EnableMsixTooling>true</EnableMsixTooling>
+		<DefaultLanguage>en</DefaultLanguage>
 	</PropertyGroup>
 
 	<ItemGroup>
