--- a/UI/ControlLibrary/XamlControlLibrary/XamlControlLibrary.csproj
+++ b/UI/ControlLibrary/XamlControlLibrary/XamlControlLibrary.csproj
@@ -1,9 +1,8 @@
-﻿<Project Sdk="MSBuild.Sdk.Extras/3.0.23">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFrameworks>net6.0-windows10.0.18362;netstandard2.0;net6.0-ios;net6.0-maccatalyst;net6.0-android</TargetFrameworks>
     <!-- Ensures the .xr.xml files are generated in a proper layout folder -->
     <GenerateLibraryLayout>true</GenerateLibraryLayout>
-	<EnableDefaultPageItems>false</EnableDefaultPageItems>
 </PropertyGroup>
   <ItemGroup Condition="'$(TargetFramework)'=='net6.0-windows10.0.18362'">
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221209.1" />
@@ -13,7 +12,7 @@
   <ItemGroup>    
     <PackageReference Include="Uno.WinUI" Version="4.6.39" Condition="'$(TargetFramework)'!='net6.0-windows10.0.18362'" />
   </ItemGroup>
-  <ItemGroup Condition="'$(TargetFramework)'!='net6.0-windows10.0.18362'">
+  <!--<ItemGroup Condition="'$(TargetFramework)'!='net6.0-windows10.0.18362'">
     <Content Include="Assets\**" />
     <Page Include="**\*.xaml" Exclude="bin\**\*.xaml;obj\**\*.xaml" />
     <Compile Update="**\*.xaml.cs">
@@ -33,5 +32,5 @@
     <Page Include="Themes\Generic.xaml">
       <Generator>MSBuild:Compile</Generator>
     </Page>
-  </ItemGroup>
+  </ItemGroup>-->
 </Project>
