--- a/UI/XamlBasics/ListViewSample/ListViewSample.Skia.Wpf/ListViewSample.Skia.Wpf.csproj
+++ b/UI/XamlBasics/ListViewSample/ListViewSample.Skia.Wpf/ListViewSample.Skia.Wpf.csproj
@@ -3,13 +3,12 @@
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-	  <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
-	  <PackageReference Include="Uno.WinUI.Skia.Wpf" Version="4.6.39" />
-	  <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.39" Condition="'$(Configuration)'=='Debug'" />
-	  <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
-	  <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.39" />
-	  <PackageReference Include="SkiaSharp.Skottie" Version="2.88.3" />
-	  <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
+    <PackageReference Include="Uno.UI" Version="4.6.39" />
+    <PackageReference Include="Uno.UI.RemoteControl" Version="4.6.39" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
+    <PackageReference Include="Uno.UI.Skia.Wpf" Version="4.6.39" />
   </ItemGroup>
   <ItemGroup>
     <UpToDateCheckInput Include="..\ListViewSample.Shared\**\*.xaml" />
