--- a/UI/HtmlControls/HtmlControls/HtmlControls.csproj
+++ b/UI/HtmlControls/HtmlControls/HtmlControls.csproj
@@ -5,7 +5,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Uno.UI.WebAssembly" Version="4.6.39" />
+	  <PackageReference Include="Uno.WinUI.WebAssembly" Version="4.6.39" />
   </ItemGroup>
 
 </Project>
