--- a/UI/UnoContoso/UnoContoso.Mobile/UnoContoso.Mobile.csproj
+++ b/UI/UnoContoso/UnoContoso.Mobile/UnoContoso.Mobile.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
 		<TargetFrameworks>net6.0-android</TargetFrameworks>
 		<TargetFrameworks>$(TargetFrameworks);net6.0-ios</TargetFrameworks>
@@ -14,11 +14,20 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
+    <PackageReference Include="Prism.DryIoc.Uno.WinUI" Version="8.1.97" />
+    <PackageReference Include="Uno" Version="2.0.2" />
+    <PackageReference Include="Uno.CommunityToolkit.WinUI" Version="7.1.100" />
+    <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls" Version="7.1.100" />
+    <PackageReference Include="Uno.CommunityToolkit.WinUI.UI.Controls.DataGrid" Version="7.1.100" />
     <PackageReference Include="Uno.WinUI" Version="4.6.39" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.39" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
     <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
     <PackageReference Include="Uno.WinUI.Lottie" Version="4.6.39" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\UnoContoso.Models\UnoContoso.Models.csproj" />
+    <ProjectReference Include="..\UnoContoso.Repository\UnoContoso.Repository.csproj" />
   </ItemGroup>
   <Choose>
     <When Condition="'$(TargetFramework)'=='net6.0-android'">
