--- a/reference/SimpleCalculator/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
@@ -18,6 +18,7 @@
 		  <PrivateAssets>all</PrivateAssets>
 		  <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
 		</PackageReference>
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.3.0" />
 		<PackageReference Include="NUnit" Version="3.13.2" />
 		<PackageReference Include="NUnit3TestAdapter" Version="4.0.0" />
 	</ItemGroup>
