--- a/reference/SimpleCalculator/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
+++ b/reference/SimpleCalculator/SimpleCalculator.Tests/SimpleCalculator.Tests.csproj
@@ -12,6 +12,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Microsoft.Extensions.Logging" Version="7.0.0" />
 		<PackageReference Include="coverlet.collector" Version="3.1.0" />
 		<PackageReference Include="FluentAssertions" Version="6.7.0" />
 		<PackageReference Include="Microsoft.Net.Compilers.Toolset" Version="4.2.0">
