--- a/.vsts-ci.yml
+++ b/.vsts-ci.yml
@@ -43,7 +43,7 @@ jobs:
            if( ('$env:System_PullRequest_PullRequestId)' -eq '') -or ($global:LASTEXITCODE -ne 0)) {
 
                 & $env:msbuildpath $SolutionName /r /p:Configuration=Release /p:AotAssemblies=false /p:WasmShellILLinkerEnabled=false /ds ;
-                if (!((Get-ChildItem -Path **\*.Tests.csproj -Recurse) -eq $null)) {
+                if (!((Get-ChildItem -Path $solutionPath\**\*.Tests.csproj -Recurse) -eq $null)) {
                     & dotnet test $SolutionName -c Release --collect "XPlat code coverage" --logger trx --no-build ;
                 }
 
