--- a/UI/MapControlSample/MapControlSample/MapControlSample.Mobile/MapControlSample.Mobile.csproj
+++ b/UI/MapControlSample/MapControlSample/MapControlSample.Mobile/MapControlSample.Mobile.csproj
@@ -1,7 +1,7 @@
 <Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
 		<TargetFrameworks>net6.0-android</TargetFrameworks>
-		<!--<TargetFrameworks>$(TargetFrameworks);net6.0-ios</TargetFrameworks>-->
+		<TargetFrameworks>$(TargetFrameworks);net6.0-ios</TargetFrameworks>
 		
 
 		<!-- Disabled because of https://github.com/xamarin/xamarin-macios/issues/16401--><!--
@@ -14,11 +14,11 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>	
-	<PackageReference Include="Mapsui.Uno.WinUI" Version="4.0.0-beta.6" />
-	<PackageReference Include="Uno.WinUI" Version="4.7.30" />
-    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.30" Condition="'$(Configuration)'=='Debug'" />
-    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.30" />
-    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="5.0.0" />
+	<PackageReference Include="Mapsui.Uno.WinUI" Version="4.0.0-beta.7" />
+	<PackageReference Include="Uno.WinUI" Version="4.7.37" />
+    <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.7.37" Condition="'$(Configuration)'=='Debug'" />
+    <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.37" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 	  <PackageReference Include="SkiaSharp.Views" Version="2.88.3" />
 	  <PackageReference Include="SkiaSharp.Views.Uno.WinUI" Version="2.88.3" />
   </ItemGroup>
