--- a/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/simple-calc/MVU-X-Xaml/SimpleCalculator/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 	<PropertyGroup>
 		<OutputType>WinExe</OutputType>
 		<TargetFramework>net6.0-windows10.0.19041.0</TargetFramework>
@@ -25,8 +25,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.544" />
-		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.544" />
+		<PackageReference Include="Uno.Extensions.Reactive.WinUI" Version="2.3.0-dev.628" />
+		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.628" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.14" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Material" Version="2.5.0-dev.15" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.221209.1" />
