--- a/reference/simple-calc/MVVM-Xaml/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/simple-calc/MVVM-Xaml/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -25,14 +25,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.0.0" />
-		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.628" />
+		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
+		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.631" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.15" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
 		<PackageReference Include="Uno.Core.Extensions.Logging.Singleton" Version="4.0.1" />
-		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.0-dev.993" />
+		<PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.7.30" />
 	</ItemGroup>
 
 	<ItemGroup>
@@ -53,5 +53,8 @@
 		-->
 		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" RuntimeFrameworkVersion="10.0.22000.28" />
 		<FrameworkReference Update="Microsoft.Windows.SDK.NET.Ref" TargetingPackVersion="10.0.22000.28" />
+	</ItemGroup>
+	<ItemGroup>
+		<PackageReference Update="Microsoft.Net.Compilers.Toolset" Version="4.4.0" />
 	</ItemGroup>
 </Project>
