--- a/UI/SplashScreenSample/SplashScreenSample.Mobile/SplashScreenSample.Mobile.csproj
+++ b/UI/SplashScreenSample/SplashScreenSample.Mobile/SplashScreenSample.Mobile.csproj
@@ -14,6 +14,9 @@
     <RuntimeIdentifier Condition="'$(TargetFramework)' == 'net6.0-macos'">osx-x64</RuntimeIdentifier>
   </PropertyGroup>
   <ItemGroup>
+    <None Remove="Android\Resources\drawable\splash.xml" />
+  </ItemGroup>
+  <ItemGroup>
     <PackageReference Include="Uno.WinUI" Version="4.6.39" />
     <PackageReference Include="Uno.WinUI.RemoteControl" Version="4.6.39" Condition="'$(Configuration)'=='Debug'" />
     <PackageReference Include="Uno.UI.Adapter.Microsoft.Extensions.Logging" Version="4.6.39" />
