--- a/reference/simple-calc/MVU-X-Xaml/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/simple-calc/MVU-X-Xaml/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -30,6 +30,7 @@
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.15" />
 		<PackageReference Include="Uno.Material.WinUI.Markup" Version="2.5.0-dev.15" />
 		<PackageReference Include="Uno.Toolkit.WinUI.Markup" Version="2.5.0-dev.21" />
+		<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 		<PackageReference Include="Uno.WinUI.Markup" Version="4.6.0-dev.18" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
