--- a/reference/simple-calc/MVVM-Xaml/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
+++ b/reference/simple-calc/MVVM-Xaml/SimpleCalculator.Windows/SimpleCalculator.Windows.csproj
@@ -28,6 +28,7 @@
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
 		<PackageReference Include="Uno.Extensions.Toolkit.WinUI" Version="2.3.0-dev.631" />
 		<PackageReference Include="Uno.Material.WinUI" Version="2.5.0-dev.15" />
+		<PackageReference Include="Uno.WinUI" Version="4.7.37" />
 		<PackageReference Include="Microsoft.WindowsAppSDK" Version="1.2.230118.102" />
 		<PackageReference Include="Microsoft.Windows.SDK.BuildTools" Version="10.0.22621.755" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Console" Version="7.0.0" />
